[tool.poetry]
name = "getproxies"
version = "1.0.0"
description = "Scraper of free online proxies"
license = "LGPL-3.0-or-later"
readme = 'README.md'
homepage = "https://github.com/granitosaurus/getproxies"
repository = "https://github.com/granitosaurus/getproxies"
keywords=['proxies', 'web-crawling', 'cli']
authors = [
    "granitosaurus <bernardas.alisauskas@pm.me>"
]

[tool.poetry.dependencies]
python = "^3.6"
parsel = "^1.5.2"
requests = "^2.22.0"
click = "^8.0.3"
typing_extensions = "^4.1.0"

[tool.poetry.dev-dependencies]
python = "^3.7"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
getproxies = 'getproxies.cli:main'
